# kokoro-sv

./: .gitignore  LICENSE  MAC_QUICKSTART.md  README.md  README_pypi.md  config_sv_female.smoke.yml  config_sv_female_joint.yml  config_sv_female_joint2.yml  config_sv_female_v3.yml  eval_renders.py  gpu_run.sh  pyproject.toml  synth_real.py  train_gb10.sh
configs/: config_sv_female.yml  config_sv_male.yml  config_sv_male_joint.yml  config_sv_male_v3.yml
data-gen/: README.md  batch_synth.py  candytron_lines_v2.txt  gen_moods.py  merge_dataset.py  mood_lines.py  preview_synth.py  split_corpus.py  verify_dataset.py
deploy/: MODEL_CARD.md  README.md
docs/: PLAN.md  RUN1.md  training-recipe.md
examples/: README.md  blend_voices.py  list_voices.py  speak.py  swedish_with_french_voice.py
kokoro_sv/: __init__.py  cli.py  core.py
kokoro_sv/_vendor/: nst_g2p.py
kokoro_sv/_vendor/g2p/: custom_lexicon.tsv
pipeline/: README.md  pyproject.toml
pipeline/configs/: datasets.yaml  train_kokoro_se_base.yml  train_kokoro_se_base_smoke.yml  voice_names.json
pipeline/scripts/: add_speakers_to_gallery.py  build_gallery_page.py  build_mix.py  build_response_page.py  prepare_dataset.py  prosody_response_test.py  train_kokoro.py  voice_gallery.py
pipeline/src/kokoro_se/: __init__.py  cli.py  dataset_manifest.py  quality_filter.py  text_normalization.py
scripts/: base_swedish.py  export_onnx.py  prepare_data.py  sv_weights.py  test_voice.py  train_gb10.sh  verify_prep.py
training/: README.md
training/configs/: datasets.yaml  testset_sv.txt
training/docs/: PLAN.md
training/scripts/: build_fas4_page.py  build_hf_pack.py  eval_base.py  evaluate_samples.py  extract_prosody.py  fas4_reanchor.py  train_kokoro.py
training/src/kokoro_se/: audio_utils.py  prosody.py
