[project]
name = "kokoro-sv"
version = "0.1.1"
description = "Swedish voices for Kokoro-82M — one line to speak, 10 named voices, neural Swedish G2P."
readme = "README_pypi.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [{ name = "Joakim Eriksson" }]
keywords = ["tts", "kokoro", "swedish", "styletts2", "speech-synthesis"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]
dependencies = [
    "kokoro>=0.9",
    "huggingface_hub",
    "torch",
    "numpy",
    "scipy",
    "soundfile",
]

[project.urls]
Homepage = "https://github.com/joakimeriksson/kokoro-sv"
Voices = "https://huggingface.co/Joakim/kokoro-sv-voices"

[project.scripts]
kokoro-sv = "kokoro_sv.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kokoro_sv"]
artifacts = ["kokoro_sv/_vendor/g2p/*.tsv"]
